--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ luac.out
 # luarocks build files
 *.src.rock
 *.zip
-*.tar.gz
+*.tar.gz 
 
 # Object files
 *.o
@@ -38,4 +38,7 @@ luac.out
 *.i*86
 *.x86_64
 *.hex
+
+# Compiled packages
+./plugin/packer_compiled.lua
 
